--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,12 @@ dependencies:
   # Utilities
   uuid: 4.5.1
   collection: 1.19.1
+  
+  # Firebase
+  firebase_core: 3.6.0
+  firebase_auth: 5.3.1
+  cloud_firestore: 5.4.3
+  firebase_storage: 12.3.2
 
 dev_dependencies:
   flutter_test:
